# cli_bridge

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  README_CN.md  docker-compose.yml  docker_entrypoint.py  pyproject.toml
.github/workflows/: windows-install-test.yml
cli_bridge/: __init__.py  __main__.py  mcp_proxy.py
cli_bridge/bus/: __init__.py  events.py  queue.py
cli_bridge/channels/: __init__.py  _streaming_mixin.py  _telegram_helpers.py  base.py  dingtalk.py  discord.py  email.py  feishu.py  manager.py  mochat.py  qq.py  slack.py  telegram.py  whatsapp.py
cli_bridge/cli/: __init__.py  _cron_commands.py  _gateway_commands.py  _helpers.py  _model_commands.py  _status_commands.py  commands.py  health.py  iflow_passthrough.py
cli_bridge/config/: __init__.py  loader.py  schema.py
cli_bridge/cron/: __init__.py  service.py  types.py
cli_bridge/engine/: __init__.py  _acp_client.py  _acp_protocol.py  _session.py  _stdio_client.py  _streaming.py  acp.py  adapter.py  analyzer.py  base_adapter.py  claude_adapter.py  claude_stdio_adapter.py  gemini_adapter.py  loop.py  retry.py  stdio_acp.py
cli_bridge/heartbeat/: __init__.py  service.py
cli_bridge/progress/: manager.py
cli_bridge/session/: __init__.py  manager.py  recorder.py
cli_bridge/templates/: AGENTS.md  BOOT.md  IDENTITY.md  __init__.py
cli_bridge/utils/: __init__.py  helpers.py  platform.py
cli_bridge/web/: __init__.py  _console_service.py  _routes.py  server.py
config/: config.example.json
docs/: config-migration-v2.md
scripts/: mcp_proxy.py  test_mcp_proxy.py
specs/001-decouple-iflow-backend/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/002-split-driver-config/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/: test_e2e_loop_flow.py  test_e2e_observability.py  test_e2e_recovery_paths.py  test_e2e_resilience.py  test_feishu_post_parsing.py  test_feishu_streaming.py  test_iflow_concurrency.py  test_qq_split.py  test_stdio_new_chat_reset.py
todos/: decouple-iflow-deferred.md
(+23 files in other folders)
